--- a/README.rdoc
+++ b/README.rdoc
@@ -1,7 +1,8 @@
 == README
-
-NCTU+ is A gathering of designers and programmers. 
-We devote ourselves to improving everyone's daily life in NCTU campus. 
-Our goals include but not limit to information transparency, user experience improvement, and getting our programming skills sharpen. 
-We also develop cool tools for NCTUers. 
-Resent project: NCTU+ learning management system (http://nctuplus.nctucs.net/).
+http://nctuplus.nctucs.net/ <br>
+<br>
+NCTU+ is A gathering of designers and programmers. <br>
+We devote ourselves to improving everyone's daily life in NCTU campus. <br>
+Our goals include but not limit to information transparency, user experience improvement, and getting our programming skills sharpen.<br> 
+We also develop cool tools for NCTUers. <br>
+Resent project: NCTU+ learning management system.
