--- a/README.rdoc
+++ b/README.rdoc
@@ -32,7 +32,5 @@ GPL License. Copyright 2014-2016 nctuplus.
     Nctuplus is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-    GNU General Public License for more details.
+    GNU General Public License for more details. <http://www.gnu.org/licenses/>
 
-    You should have received a copy of the GNU General Public License
-    along with Foobar.  If not, see <http://www.gnu.org/licenses/>.
