--- a/README.rdoc
+++ b/README.rdoc
@@ -10,7 +10,7 @@ Our goals include but not limit to information transparency, user experience imp
 
 We also develop cool tools for NCTUers.
 
-Resent projects: 
+Recent projects:
 * Learning management system
 * Student activities bulletin board
 * Second-hand book trading platform
